--- a/.github/workflows/main_sample-webhook.yml
+++ b/.github/workflows/main_sample-webhook.yml
@@ -5,67 +5,67 @@
 name: Build and deploy Python app to Azure Web App - sample-webhook
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+    push:
+        branches:
+            - main
+    workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
+    build:
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read #This is required for actions/checkout
 
-    steps:
-      - uses: actions/checkout@v4
+        steps:
+            - uses: actions/checkout@v4
 
-      - name: Set up Python version
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
+            - name: Set up Python version
+              uses: actions/setup-python@v5
+              with:
+                  python-version: '3.10'
+                  ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_INTERTECH_LAPTOP }}
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+            - name: Create and start virtual environment
+              run: |
+                  python -m venv venv
+                  source venv/bin/activate
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+            - name: Install dependencies
+              run: pip install -r requirements.txt
 
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-app
-          path: |
-            release.zip
-            !venv/
+            # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
+            - name: Zip artifact for deployment
+              run: zip release.zip ./* -r
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
+            - name: Upload artifact for deployment jobs
+              uses: actions/upload-artifact@v4
+              with:
+                  name: python-app
+                  path: |
+                      release.zip
+                      !venv/
 
-      
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
-        with:
-          app-name: 'sample-webhook'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D33334892B76457FBB23359110D9419E }}
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
+        environment:
+            name: 'Production'
+            url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+        steps:
+            - name: Download artifact from build job
+              uses: actions/download-artifact@v4
+              with:
+                  name: python-app
+
+            - name: Unzip artifact for deployment
+              run: unzip release.zip
+
+            - name: 'Deploy to Azure Web App'
+              uses: azure/webapps-deploy@v3
+              id: deploy-to-webapp
+              with:
+                  app-name: 'sample-webhook'
+                  slot-name: 'Production'
+                  publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D33334892B76457FBB23359110D9419E }}
