--- a/.github/workflows/main_sample-webhook.yml
+++ b/.github/workflows/main_sample-webhook.yml
@@ -23,7 +23,7 @@ jobs:
               uses: actions/setup-python@v5
               with:
                   python-version: '3.10'
-                  ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_INTERTECH_LAPTOP }}
+                  token: ${{ secrets.SSH_PRIVATE_KEY_INTERTECH_LAPTOP }}
 
             - name: Create and start virtual environment
               run: |
